--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,29 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "E2E_PowershellReference",
-      "build_source_folder": ".",
-      "build_output_subfolder": "E2E_PowershellReference",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "PowershellModule": "Content",
-        "PowershellCmdlet": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "base_path": "powershell",
-      "site_name": "Docs",
-      "customized_tasks": {
-        "docset_prebuild": [
-          "_dependentPackages/MAML2Yaml/tools/Run.ps1"
-        ]
-      }
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
